Sat Dec 27 23:17:56 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbar.c (slide_idle_handler): use CHILD_VISIBLE
	instead of VISIBLE to determine whether we should stop
	sliding. (#130018, reported by Christian Persch).

Fri Dec 26 23:24:35 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_add_radio_actions_full): 
	Don't use first_action without initializing it if n_entries is 0.

Thu Dec 25 00:26:34 2003  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkcursor-x11.c (gdk_display_get_default_cursor_size):
	Add the missing _get_ to the name of the non-Xcursor version of
	this function.  (noticed by Torsten Schoenfeld)

Tue Dec 23 22:34:50 2003  Manish Singh  <yosh@gimp.org>

	* gtk/gtkicontheme.h: fix GTK_TYPE_ICON_INFO macro, reported by
	muppet.

Wed Dec 24 01:12:53 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkclipboard.[hc]: Add GtkClipboardTargetReceivedFunc,
	gtk_clipboard_request_targets() and 
	gtk_clipboard_wait_for_targets().  (#101774, Dom Lachowicz)

Mon Dec 22 00:40:39 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c (gtk_calendar_paint_arrow): Use 
	gtk_paint_arrow instead of draw_arrow_left/draw_arrow_right.
	* gtk/gtkcalendar.c (draw_arrow_left):
	(draw_arrow_right): Removed. 
	* gtk/gtkcalendar.c (gtk_calendar_realize_arrows): 
	* gtk/gtkcalendar.c (gtk_calendar_state_changed): Set the
	arrow_state to GTK_STATE_INSENSITIVE if the calendar is 
	insensitive.  (#97376)

Sun Dec 21 23:17:01 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (update_node): 
	(update_smart_separators): 
	(_gtk_menu_is_empty): 
	(find_menu_position): 
	* gtk/gtktreeview.c (gtk_tree_view_search_dialog_destroy): 
	* gtk/gtkcombobox.c (gtk_combo_box_relayout_item): 
	(gtk_combo_box_relayout): Fix memory leaks caused by the
	failure to free the result of gtk_container_get_children().

Sun Dec 21 17:34:22 2003  Soeren Sandmann  <sandmann@daimi.au.dk>
