@@ -1,3 +1,7 @@
+Mon Dec 29 01:40:20 2003  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtk-sections.txt: Add gtk_accel_map_{un,}lock_path.
+
 Wed Dec 24 01:12:12 2003  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtk-sections.txt: Add GtkClipboardTargetReceivedFunc,
